<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.kie.trustyai</groupId>
    <artifactId>trustyaiexplainability</artifactId>
    <version>999-SNAPSHOT</version>
    <name>TrustyAI Explainability</name>
    <description>TrustyAI is a java library for Explainable AI.</description>
    <url>https://github.com/trustyai-explainability/trustyai-explainability</url>
    <packaging>pom</packaging>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <scm>
        <connection>scm:git:git@github.com:trustyai-explainability/trustyai-explainability.git</connection>
        <url>scm:git:git@github.com:trustyai-explainability/trustyai-explainability.git</url>
        <developerConnection>scm:git:git@github.com:trustyai-explainability/trustyai-explainability.git
        </developerConnection>
        <tag>HEAD</tag>
    </scm>

    <developers>
        <developer>
            <name>TrustyAI Explainability team</name>
            <url>https://github.com/orgs/trustyai-explainability/people</url>
        </developer>
    </developers>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>

        <version.org.slf4j>1.7.36</version.org.slf4j>
        <version.com.fasterxml.jackson.databind>2.15.0</version.com.fasterxml.jackson.databind>
        <version.org.apache.commons.commons-lang3>3.12.0</version.org.apache.commons.commons-lang3>
        <version.org.apache.commons.commons-csv>1.9.0</version.org.apache.commons.commons-csv>
        <version.org.apache.opennlp>1.9.2</version.org.apache.opennlp>
        <version.org.junit.jupiter>5.9.1</version.org.junit.jupiter>
        <version.org.junit.platform>1.9.0</version.org.junit.platform>
        <version.org.mockito>4.8.0</version.org.mockito>
        <version.org.assertj>3.22.0</version.org.assertj>
        <version.org.awaitility>4.2.0</version.org.awaitility>

        <version.org.optaplanner>8.30.0.Final</version.org.optaplanner>
        <version.org.kie.kogito>1.30.0.Final</version.org.kie.kogito>

        <version.surefire.plugin>3.0.0</version.surefire.plugin> <!-- minimum required by JUnit 5 -->
        <version.shade.plugin>3.4.0</version.shade.plugin> <!-- minimum required by JUnit 5 -->

        <kogito.formatter.version>${version.org.kie.kogito}</kogito.formatter.version>
        <formatter.plugin.version>2.13.0</formatter.plugin.version>
        <impsort.plugin.version>1.9.0</impsort.plugin.version>

        <version.io.netty>4.1.100.Final</version.io.netty>
        <nexus.staging.plugin.version>1.6.6</nexus.staging.plugin.version>

        <formatter.skip>false</formatter.skip>
        <formatter.goal>format</formatter.goal>
        <impsort.goal>sort</impsort.goal>

    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.optaplanner</groupId>
                <artifactId>optaplanner-bom</artifactId>
                <version>${version.org.optaplanner}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${version.org.apache.commons.commons-lang3}</version>
            </dependency>

            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-csv</artifactId>
                <version>${version.org.apache.commons.commons-csv}</version>
            </dependency>

            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${version.org.slf4j}</version>
            </dependency>

            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${version.com.fasterxml.jackson.databind}</version>
            </dependency>

            <!-- TEST dependencies -->
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>${version.org.junit.jupiter}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-api</artifactId>
                <version>${version.org.junit.jupiter}</version>
            </dependency>
            <dependency>
                <groupId>org.junit.platform</groupId>
                <artifactId>junit-platform-launcher</artifactId>
                <version>${version.org.junit.platform}</version>
            </dependency>
            <dependency>
                <groupId>org.assertj</groupId>
                <artifactId>assertj-core</artifactId>
                <version>${version.org.assertj}</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>${version.org.mockito}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.awaitility</groupId>
                <artifactId>awaitility</artifactId>
                <version>${version.org.awaitility}</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-simple</artifactId>
                <version>${version.org.slf4j}</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>org.kie.kogito</groupId>
                <artifactId>kogito-dmn</artifactId>
                <version>${version.org.kie.kogito}</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>org.kie.kogito</groupId>
                <artifactId>kogito-pmml</artifactId>
                <version>${version.org.kie.kogito}</version>
                <scope>test</scope>
            </dependency>


            <dependency>
                <groupId>org.apache.opennlp</groupId>
                <artifactId>opennlp-tools</artifactId>
                <version>${version.org.apache.opennlp}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <executions>
                        <execution>
                            <id>attach-javadocs</id>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <executions>
                        <execution>
                            <id>attach-sources</id>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>net.revelc.code.formatter</groupId>
                    <artifactId>formatter-maven-plugin</artifactId>
                    <version>${formatter.plugin.version}</version>
                    <dependencies>
                        <dependency>
                            <artifactId>kogito-ide-config</artifactId>
                            <groupId>org.kie.kogito</groupId>
                            <version>${kogito.formatter.version}</version>
                        </dependency>
                    </dependencies>
                    <configuration>
                        <configFile>eclipse-format.xml</configFile>
                        <lineEnding>LF</lineEnding>
                        <skip>${formatter.skip}</skip>
                        <excludes>
                            <exclude>org/kie/trustyai/connectors/kserve/v2/grpc/</exclude>
                        </excludes>
                    </configuration>
                    <executions>
                        <execution>
                            <goals>
                                <goal>${formatter.goal}</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>net.revelc.code</groupId>
                    <artifactId>impsort-maven-plugin</artifactId>
                    <version>${impsort.plugin.version}</version>
                    <configuration>
                        <!-- keep in sync with kogito-ide-config/src/main/resources/eclipse.importorder -->
                        <groups>java.,javax.,org.,com.,io.</groups>
                        <staticGroups>*</staticGroups>
                        <staticAfter>true</staticAfter>
                        <!-- keep in sync with the formatter-maven-plugin -->
                        <skip>${formatter.skip}</skip>
                        <removeUnused>true</removeUnused>
                    </configuration>
                    <executions>
                        <execution>
                            <goals>
                                <goal>${impsort.goal}</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${version.surefire.plugin}</version>
                    <configuration>
                        <argLine>-Xmx2048m -Dfile.encoding=UTF-8 --add-opens java.base/java.nio=ALL-UNNAMED</argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>${version.surefire.plugin}</version>
                </plugin>
                <plugin>
                    <artifactId>maven-shade-plugin</artifactId>
                    <version>${version.shade.plugin}</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>versions-maven-plugin</artifactId>
                    <version>2.13.0</version>
                    <configuration>
                        <generateBackupPoms>false</generateBackupPoms>
                        <processAllModules>true</processAllModules>
                        <processDependencies>false</processDependencies>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>net.revelc.code.formatter</groupId>
                <artifactId>formatter-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>net.revelc.code</groupId>
                <artifactId>impsort-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.1.2</version>
            </plugin>
        </plugins>
    </build>

    <modules>
        <module>explainability-core</module>
        <module>explainability-arrow</module>
        <module>explainability-connectors</module>
        <module>explainability-service</module>
    </modules>


    <profiles>
        <profile>
            <!-- Use only for Nexus deployment. -->
            <id>deployment</id>
            <modules>
                <module>explainability-core</module>
                <module>explainability-arrow</module>
            </modules>
        </profile>
        <profile>
            <!-- Use for CPaaS builds. -->
            <id>service-minimal</id>
            <modules>
                <module>explainability-core</module>
                <module>explainability-connectors</module>
                <module>explainability-service</module>
            </modules>
        </profile>
        <profile>
            <id>integration-tests</id>
            <modules>
                <module>explainability-integrationtests</module>
            </modules>
        </profile>
        <profile>
            <!-- Fail the build if code does not follow the standards. -->
            <id>validate-formatting</id>
            <activation>
                <property>
                    <name>validate-formatting</name>
                </property>
            </activation>
            <properties>
                <formatter.skip>false</formatter.skip>
                <formatter.goal>validate</formatter.goal>
                <impsort.goal>check</impsort.goal>
            </properties>
        </profile>
        <profile>
            <id>quickly</id>
            <activation>
                <property>
                    <name>quickly</name>
                </property>
            </activation>
            <properties>
                <formatter.skip>true</formatter.skip>
                <skipITs>true</skipITs>
                <skipTests>true</skipTests>
            </properties>
        </profile>
    </profiles>
    
    <distributionManagement>
        <repository>
            <id>jboss.staging</id>
            <url>https://repository.jboss.org/nexus/service/local/staging/deploy/maven2</url>
        </repository>
    </distributionManagement>

</project>